# cvsoc

./: .editorconfig  .gitignore  README.md
.devcontainer/: devcontainer.json
00_led_blinking/doc/: README.md
00_led_blinking/hdl/: de10_nano_top.vhd  led_blinking.vhd  power_on_reset_generator.vhd
00_led_blinking/quartus/: Makefile  de10_nano_project.tcl
00_led_blinking/scripts/: check_timing_slacks.py
01_led_running/hdl/: de10_nano_top.vhd  led_running.vhd
01_led_running/quartus/: Makefile  de10_nano.sdc  de10_nano_project.tcl
04_nios2_led/: .gitignore
04_nios2_led/doc/: README.md
06_nios2_interrupts/: .gitignore
07_hps_interrupts/: .gitignore
08_nios2_debug/: .gitignore
10_linux_led/: .gitignore  Makefile
11_ethernet_hps_led/: .gitignore  Makefile
12_zephyr_led/: .gitignore  Makefile
12_zephyr_led/app/: CMakeLists.txt  prj.conf  west.yml
12_zephyr_led/app/boards/: cyclonev_socdk.overlay
12_zephyr_led/app/patches/: 0001-cyclonev-download_all-disable-mmu-before-spl-restore.patch
12_zephyr_led/app/src/: main.c
docs/: INSTALL_DEPS_PHASE8.md  about.md  command-reference.md  howto_vscode_debugging.md  howto_windows_wsl2_programmer.md  qa.md  review.md  roadmap.md  tutorial_debug_setup.md  tutorial_docker_dev_environment.md  tutorial_docker_gui.md  tutorial_phase0_led_blinking.md  tutorial_phase1_led_running.md  tutorial_phase2_nios2.md  tutorial_phase3_hps_baremetal.md  tutorial_phase4_interrupts.md  tutorial_phase5_gdb_debugging.md  tutorial_phase6_embedded_linux.md  tutorial_phase7_ethernet.md  tutorial_phase8_zephyr.md
(+114 files in other folders)
